# QOS

./: .gitignore  .gitmodules  Dockerfile  README.md  benchmarker.py  benchmarker_mod.py  circuit.py  clean_db.py  compiler.py  config.yml  cut_circuits_overheads40.csv  cut_example.py  dump.rdb  end_to_end_eval.py  executor.py  full_example.yml  get_calibration_fidelity.py  kolkata_fids_8.txt  large_circuit_fidelities.py  large_circuits_solo_12.csv  large_circuits_solo_8.csv  layout_plotter.py  load_qpus.py  main.py  mainManos.py  match_test.py  multiprogrammer_test.py  passes_test.py  plot_from_data.py  plotter.py  pyproject.toml  qpus_available.yml  quick_plotter.py  qvm.txt  requirements.txt  results.csv  results.txt  scheduler_eval.py  shell.nix  shell_laptop.nix  (+2 more)
Baseline_Multiprogramming/: README.md  multiprogramming.py
FrozenQubits/: FrozenQubits_example.py  helper.py  helper_FrozenQubits.py  helper_qaoa.py
application_layer/: circuit.py  test.py
backends/: __init__.py  ibm-sim.py  ibm-system.py  ibm_backends.py  ibm_sim.py  test_qpu.py
benchmarking/: __init__.py
benchmarks/: __init__.py  _chemistry.py  _quantum_information.py  _types.py  _utils.py  chemistry.py  error_correction.py  optimization.py  quantum_information.py  sim.py  stabilizers.py  statistic.py
calibration_data/: ibmq_kolkata2023-05-01T10:00:00.json  ibmq_kolkata2023-05-02T10:00:00.json  ibmq_kolkata2023-05-03T10:00:00.json  ibmq_kolkata2023-05-04T10:00:00.json  ibmq_kolkata2023-05-05T10:00:00.json  ibmq_kolkata2023-05-06T10:00:00.json  ibmq_kolkata2023-05-07T10:00:00.json  ibmq_kolkata2023-05-08T10:00:00.json  ibmq_kolkata2023-05-09T10:00:00.json  ibmq_kolkata2023-05-10T10:00:00.json  ibmq_kolkata2023-05-11T10:00:00.json  ibmq_kolkata2023-05-12T10:00:00.json  ibmq_kolkata2023-05-13T10:00:00.json  ibmq_kolkata2023-05-14T10:00:00.json  ibmq_kolkata2023-05-15T10:00:00.json  ibmq_kolkata2023-05-16T10:00:00.json  ibmq_kolkata2023-05-17T10:00:00.json  (+166 more)
components/: api.py
qvm/: .gitignore  README.md  __init__.py  approx.py  bisection.py  circuit.py  converters.py  cut.py  device.py  frag_executor.py  knit.py  ladder.py  overhead.py  prob.py  pyproject.toml  quasi_distr.py  qubit_groups.py  run.py  shell.nix  sim.py  virtual_circuit.py  virtual_cx.py  virtual_cz.py  virtual_gate.py  virtual_gates.py  virtual_rzz.py
qvm/compiler/: __init__.py  asp.py  compiler.py  dag.py  types.py  util.py
qvm/compiler/distr_transpiler/: qubit_reuser.py
qvm/compiler/virtualization/: __init__.py  gate_decomp.py  reduce_deps.py  wire_decomp.py
qvm/cut/passes/: __init__.py
qvm/examples/: fid.py  simple.py  wire_cut.py
qvm/qvm/: run.py  virtual_circuit.py  virtual_gates.py
qvm/qvm/compiler/: asp.py  dag.py  types.py  util.py
qvm/qvm/compiler/distr_transpiler/: __init__.py  qubit_reuser.py
qvm/qvm/compiler/virtualization/: gate_decomp.py  reduce_deps.py  wire_decomp.py
qvm/scripts/: save_ibm_token.py
qvm/utils/: __init__.py
(+4164 files in other folders)
