[tool.poetry]
name = "qstack"
version = "0.0.1"
description = "Quantum System Stack"
authors = ["Nathaniel Tornow <nathaniel.tornow@tum.de>"]
license = "Apache Licence Version 2.0"

[tool.poetry.dependencies]
python = "^3.9"
qiskit-terra = "^0.22.0"
qiskit-aer = "^0.11.0"
qiskit-ibmq-provider = "^0.19.2"
scipy = "^1.9.3"
numpy = "^1.23.4"
mapomatic = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
pytest = "^7.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
