[project]
name = ""
version = ""
description = ""
authors = [
    {name = "FranciscoRomao", email = "francisco.romao@tum.de"},
]
dependencies = [
    "qiskit",
    "mapomatic",
    "pyyaml",
    "sortedcontainers",
    "black",
    "matplotlib",
    "redis",
    "networkx",
    "jsonpickle",
    "qiskit-ibm-provider",
    #"qiskit-aer",
    "clingo",
    "qiskit-optimization",
    "sklearn>=0.0.post9",
    "SQLAlchemy>=2.0.21",
    "mqt>=0.1.1",
    "mqt-predictor>=1.2.2",
    "pandas>=2.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
